# esis

./: README.rst  meson.build  pyproject.toml
.github/workflows/: test_all.yml
.github/workflows/assets/: cgroup.conf  slurm.conf
example/: generate_parameters.py  sbatch_template.sh  train_coarse_lptc_1h1l_scanning.py
runnable_tests/01_simple_run/: README.rst  extract_mass.py  generate_data.py  generate_parameters.py  sbatch_template.sh  setup_example.sh
runnable_tests/02_dependencies/: README.rst
runnable_tests/02_dependencies/A_prepare_data/: generate_parameters.py  produce_data.py  sbatch_template.sh
runnable_tests/02_dependencies/B_analyze_data/: sbatch_template.sh
runnable_tests/03_checkpointing/: README.rst  check_results.py  generate_parameters.py  sbatch_template.sh  train_operator.py
runnable_tests/04_iterative_checkpointing/: README.rst  generate_parameters.py  sbatch_template.sh  setup.sh  train_operator.py
runnable_tests/05_chpt_load/: README.rst
runnable_tests/05_chpt_load/A_train/: generate_parameters.py  sbatch_template.sh  train_operator.py
runnable_tests/05_chpt_load/B_test/: generate_parameters.py  sbatch_template.sh  test_operator.py
runnable_tests/05_chpt_load/includes/: alphas.json
runnable_tests/06_freeze_requirement/: README.rst
src/esis/: __init__.py  const.py  list.py  list_workdirs.py  main.py  meson.build  status.py
src/esis/checkpoint/: __init__.py  checkpoint.py  facility.py
src/esis/cmd/: const.py  dependency.py  list_workdirs.py  requirements.py  run.py  setup.py  status.py
(+6 files in other folders)
