[project]
name="esis"
authors = [
    {name="Daniel Knüttel", email="daniel.knuettel@physik.uni-regensburg.de"}
]
description = "Easy SLURM Isolated Scanner"
requires-python=">=3.6"
readme="README.rst"
dependencies=["docopt-ng"]

version="0.0.4"

[project.urls]
repository="https://github.com/daknuett/esis"
homepage="https://github.com/daknuett/esis"

[project.scripts]
esis = "esis.main:main"
[build-system]
requires = ["meson", "toml", "ninja", "meson-python"]
build-backend = 'mesonpy'
