python.install_sources(
  '__init__.py', 'main.py'
  , pure: true
  , subdir: 'esis'
)

python.install_sources(
  'cmd/const.py', 'cmd/run.py', 'cmd/setup.py', 'cmd/status.py', 'cmd/list_workdirs.py'
  , 'cmd/dependency.py', 'cmd/__init__.py'
  , pure: true
  , subdir: 'esis/cmd'
)

python.install_sources(
  'checkpoint/checkpoint.py', 'checkpoint/facility.py'
  , 'checkpoint/__init__.py'
  , pure: true
  , subdir: 'esis/checkpoint'
)
